fixed to crop rather than distort recently played thumbnail; updated to show placeholder icon for zk albums without art

--- a/css/zoostyle.css
+++ b/css/zoostyle.css
@@ -879,14 +879,16 @@ a:hover.copy {
 
 .recently-played .card .artwork {
     width: 100%;
-    max-height: 120px;
-    min-height: 120px;
+    max-height: 126px;
+    min-height: 126px;
     display: block;
     top: 0;
     left: 0;
     transition: all 400ms ease 0s;
     opacity: 1;
     border: 0;
+    object-fit: cover;
+    object-position: center 10%;
 }
 
 .recently-played .card .info {
